Tambah animasi navbar modern v3

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -141,13 +141,13 @@
 <body>
   <nav>
      <ul>
-      <li><a href="/aksi26/">Beranda</a></li>
-      <li><a href="/aksi26/timeline/">Timeline</a></li>
-      <li><a href="/aksi26/tim/">Tim</a></li>
-      <li><a href="/aksi26/progress/">Progress</a></li>
-      <li><a href="/aksi26/led/">LED</a></li>
-      <li><a href="/aksi26/lkps/">LKPS</a></li>
-      <li><a href="/aksi26/bukti/">Bukti</a></li>
+      <li><a href="/aksibm-26/">Beranda</a></li>
+      <li><a href="/aksibm-26/timeline/">Timeline</a></li>
+      <li><a href="/aksibm-26/tim/">Tim</a></li>
+      <li><a href="/aksibm-26/progress/">Progress</a></li>
+      <li><a href="/aksibm-26/led/">LED</a></li>
+      <li><a href="/aksibm-26/lkps/">LKPS</a></li>
+      <li><a href="/aksibm-26/bukti/">Bukti</a></li>
     </ul>
   </nav>
 
