Tambah menu Pedoman dengan link PDF dan URL eksternal

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -148,6 +148,7 @@
       <li><a href="/aksibm-26/led/">LED</a></li>
       <li><a href="/aksibm-26/lkps/">LKPS</a></li>
       <li><a href="/aksibm-26/bukti/">Bukti</a></li>
+      <li><a href="/aksibm-26/pedoman/">Pedoman</a></li>
     </ul>
   </nav>
 
