--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <title>{{ page.title | default: site.title }}</title>
   
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/aksibm-26/assets/images/favicon.png">
+  <link rel="icon" type="image/ico" href="/aksibm-26/assets/images/favicon.ico">
   
   <style>
     :root {
