Tambah menu GAP Analysis setelah Progress

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -158,6 +158,7 @@
       <li><a href="/aksibm-26/timeline/" {% if page.url == "/timeline/" %}class="active"{% endif %}>Timeline</a></li>
       <li><a href="/aksibm-26/tim/" {% if page.url == "/tim/" %}class="active"{% endif %}>Tim</a></li>
       <li><a href="/aksibm-26/progress/" {% if page.url == "/progress/" %}class="active"{% endif %}>Progress</a></li>
+      <li><a href="/aksibm-26/gap-analysis/" {% if page.url == "/gap-analysis/" %}class="active"{% endif %}>GAP Analysis</a></li>
       <li><a href="/aksibm-26/lkps/" {% if page.url == "/lkps/" %}class="active"{% endif %}>LKPS</a></li>
       <li><a href="/aksibm-26/led/" {% if page.url == "/led/" %}class="active"{% endif %}>LED</a></li>
       <li><a href="/aksibm-26/bukti/" {% if page.url == "/bukti/" %}class="active"{% endif %}>Bukti</a></li>
