--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -172,7 +172,7 @@
 
   <footer>
     &copy; {{ 'now' | date: "%Y" }} Program Studi S1 Terapan Broadband Multimedia<br>
-    Target Akreditasi: September 2026 | Predikat: Unggul
+    Target Akreditasi: Mei 2026 | Predikat: Unggul
   </footer>
 </body>
 </html>
